@@ -1,5 +1,6 @@
 2017-10-29  Markus Gans  <guru.mail@muenster.de>
 	* Adaptation of the inheritance diagrams in the header files
+	* Add a standardized cb_exitApp callback method to FApplication
 
 2017-10-27  Markus Gans  <guru.mail@muenster.de>
 	* FWidget now inherits directly from FObject 
